# nitac-ai-club-platform

./: .gitignore  docker-compose.yml  grant_admin.py  kaggle_utils.py  pyproject.toml  revoke_admin.py  run.py  run_admin.py  test.html
apps/: __init__.py
apps/authentication/: forms.py  models.py  routes.py
apps/competition/: models.py
apps/home/: routes.py  utils.py
apps/static/assets/js/: argon.js
apps/templates/accounts/: login copy.html  login.html  register.html
apps/templates/admin/: analytics copy.html  analytics.html  not_admin.html  register_competitions.html  update_competitions.html
apps/templates/home/: available_competitions.html  competition.html  index_.html  page-403.html  page-404.html  page-500.html  profile.html  ranking.html  user.html
apps/templates/includes/: footer-fullscreen.html  footer.html  navigation-fullscreen.html  navigation.html  sidenav.html
apps/templates/layouts/: base-fullscreen.html
migrations/versions/: 5c9cd7dc6998_.py
proto/: kaggle_best_score.py  test.ipynb  test.py  test2.ipynb
src/argon_dashboard_flask/: __init__.py
