[project]
name = "argon-dashboard-flask"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "flask>=3.0.3",
    "flask-login>=0.6.3",
    "flask-migrate>=4.0.7",
    "wtforms>=3.1.2",
    "flask-wtf>=1.2.1",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy>=2.0.35",
    "email-validator>=2.2.0",
    "python-decouple>=3.8",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.4",
    "flask-restx>=1.3.0",
    "authlib>=1.3.2",
    "requests>=2.32.3",
    "flask-dance[google]>=7.1.0",
]
readme = "README.md"
requires-python = ">= 3.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/argon_dashboard_flask"]
